# HealthGatheringIC

./: .gitignore  GradCAM.ipynb  README.md  _vizdoom.ini  main.py  pyproject.toml
env/: vizdoomenv.py
rllte/: main.py
sb3/: gradcam.py  main (1).py  main.py  newmain.py  video.py  wiwiwi.py
scenarios/: health_gathering.cfg  health_gathering.wad.bak
sf/: main.py  main2.py
wrappers/: glaucoma.py  image_transformation.py  intrinsic_reward.py  render_wrapper.py
